--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.15.0",
+    "auth": "^1.2.3",
     "bcryptjs": "^3.0.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
